Fix footer height issue on smaller screens now that the footer has more content in it

--- a/web/app/themes/andyserong/style.css
+++ b/web/app/themes/andyserong/style.css
@@ -1034,8 +1034,11 @@ object {
 }
 
 @media screen and (max-width: 640px) {
-	.site-header-trees, .site-footer-trees {
+	.site-header-trees {
 		height: 25vh;
+	}
+	.site-footer-trees {
+		height: auto;
 	}
 }
 
